fixed horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 14px;
+  overflow-x: hidden;
 }
 body {
   font-family: "Raleway", sans-serif;
